--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,19 +9,13 @@
       {% endfor %}
     </ul>
 
-    <div id="tags__bottom">
+    <!-- <div id="tags__bottom">
       <a href="mailto:{{ site.author.email }}" id="icon-email" class="tags-btn fontello"></a>
       <a href="/pages/rss.xml" id="icon-feed" class="tags-btn fontello"></a>
-    </div>
+    </div> -->
   </nav> <!-- end #tags -->
 
-  <div id="posts-list">
-    <form action="" id="search-form">
-      <a href="/index.html" id="mobile-avatar" style="background-image:url({{ site.avatar }})"></a>
-      <!-- NOTE: input field is disabled by default -->
-      <input id="search-input" type="text" placeholder="Search..." disabled >
-    </form>
-
+  <div id="posts-list">  
     <nav id="pl__container">
     {% for post in site.posts %}
       <a class="{{ post.categories }} pl__all" href="{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span><span class="pl__date">{{ post.date | date: "%b %Y" }}</span></a>
